welcome.lessons.welcome.array.maxvalue.Extrema.scala.error
extrema:6: error: value !== is not a member of Int
if (nums.length !== 1 ){
                ^